05-gateways/gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers: 
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "book.info.com"
