05-gateways/vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: book-info-vs
  namespace: istio-system
spec:
  hosts:
  - "book.info.com"  
  - productpage
  gateways:
    - istio-gateway  
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: productpage.default.svc.cluster.local
        port:
          number: 9080
